tooling/nargo_cli/tests/snapshots/execution_success/simple_add_and_ret_arr/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) -> pub [Field; 1] {
    [x + 1]
}
