tooling/nargo_cli/tests/snapshots/execution_success/simple_add_and_ret_arr/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[simple_add_and_ret_arr] Circuit output: [0x02]
